--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ node_js:
   - "0.6"
   - "0.10"
 env:
-  - TEST_COMMAND="node ./test/test-build.js --time-limit 48m"
+  - TEST_COMMAND="node ./test/test.js --time-limit 48m"
 git:
   depth: 1
 branches:
   only:
     - master
 script:
-  $TEST_COMMAND
+  - "npm install ."
+  - "rm -rf ./node_modules/lodash"
+  - "git clone --depth=1 --branch=master git://github.com/lodash/lodash.git ./node_modules/lodash/"
+  - $TEST_COMMAND
