--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The Lo-Dash command-line interface.",
   "homepage": "http://lodash.com/custom-builds",
   "license": "MIT",
+  "main": "bin/lodash",
   "keywords": [
     "builds",
     "compile",
@@ -18,24 +19,19 @@
     "Kit Cambridge <github@kitcambridge.be> (http://kitcambridge.be/)",
     "Mathias Bynens <mathias@qiwi.be> (http://mathiasbynens.be/)"
   ],
-  "bugs": {
-    "url": "https://github.com/lodash/lodash-cli/issues"
-  },
+  "bugs": "https://github.com/lodash/lodash-cli/issues",
   "repository": {
     "type": "git",
     "url": "https://github.com/lodash/lodash-cli.git"
   },
   "bin": {
-    "lodash": "./bin/lodash"
+    "lodash": "bin/lodash"
   },
   "dependencies": {
     "closure-compiler": "~0.2.1",
     "lodash": "1.3.1",
     "uglify-js": "~2.4.0"
   },
-  "engines": [
-    "node"
-  ],
   "files": [
     "LICENSE.txt",
     "bin/lodash",
