--- a/package.json
+++ b/package.json
@@ -5,13 +5,8 @@
   "homepage": "http://lodash.com/custom-builds",
   "license": "MIT",
   "main": "bin/lodash",
-  "keywords": [
-    "builds",
-    "compile",
-    "customize",
-    "lodash",
-    "util"
-  ],
+  "bin": { "lodash": "bin/lodash" },
+  "keywords": ["builder", "compile", "customize", "lodash", "util"],
   "author": "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
   "contributors": [
     "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
@@ -20,13 +15,7 @@
     "Mathias Bynens <mathias@qiwi.be> (http://mathiasbynens.be/)"
   ],
   "bugs": "https://github.com/lodash/lodash-cli/issues",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lodash/lodash-cli.git"
-  },
-  "bin": {
-    "lodash": "bin/lodash"
-  },
+  "repository": { "type": "git", "url": "https://github.com/lodash/lodash-cli.git" },
   "dependencies": {
     "closure-compiler": "~0.2.1",
     "lodash": "1.3.1",
