--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "repository": { "type": "git", "url": "https://github.com/lodash/lodash-cli.git" },
   "dependencies": {
     "closure-compiler": "~0.2.2",
+    "glob": "~3.2.6",
     "lodash": "2.2.1",
     "uglify-js": "~2.4.0"
   },
