--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - "0.10"
 env:
   global:
-    - BIN="node" BUILD=false EXPORTS="commonjs" OPTION="" OUTPUT_PATH=false TARGET_PATH=false TEST=false
+    - BIN="node" BUILD="compat" EXPORTS="commonjs" OPTION="" OUTPUT_PATH=false TARGET_PATH=false TEST_BUILDS=false 
   matrix:
     - BUILD="compat"
     - BUILD="legacy"
@@ -27,9 +27,9 @@ matrix:
     - node_js: "0.10"
       env: BIN="ringo"   BUILD="legacy"
     - node_js: "0.6"
-      env: TEST="node ./test/test.js --time-limit 45m"
+      env: TEST_BUILDS=true
     - node_js: "0.10"
-      env: TEST="node ./test/test.js --time-limit 45m"
+      env: TEST_BUILDS=true
 git:
   depth: 10
 branches:
@@ -46,8 +46,9 @@ before_install:
   - "[ $BIN != 'rhino' ] || (echo -e '#!/bin/sh\\njava -jar /opt/rhino-1.7R5/js.jar $@' | sudo tee /usr/local/bin/rhino && sudo chmod +x /usr/local/bin/rhino)"
   - "[ $BIN != 'ringo' ] || (wget http://ringojs.org/downloads/ringojs-0.9.zip && sudo unzip ringojs-0.9 -d /opt && rm ringojs-0.9.zip)"
   - "[ $BIN != 'ringo' ] || (sudo ln -s /opt/ringojs-0.9/bin/ringo /usr/local/bin/ringo && sudo chmod +x /usr/local/bin/ringo)"
+  - "[ $TEST_BUILDS == true ]  || node ./bin/lodash modularize $BUILD exports=$EXPORTS -o $OUTPUT_PATH"
+  - "[ $TEST_BUILDS == false ] || node ./bin/lodash $BUILD -d -o ./node_modules/lodash/dist/lodash.$BUILD.js"
 script:
-  - "[ $BUILD == false ]    || node ./bin/lodash modularize $BUILD exports=$EXPORTS -o $OUTPUT_PATH"
-  - "[ $EXPORTS != 'npm' ]  || (cd ./npm && cp ../test/npm/index.js ./index.js && cd ../)"
-  - "[ \"$TEST\" != false ] || $BIN $OPTION ./node_modules/lodash/test/test.js $TARGET_PATH"
-  - "[ \"$TEST\" == false ] || $TEST"
+  - "[ $EXPORTS != 'npm' ]     || (cd ./npm && cp ../test/npm/index.js ./index.js && cd ../)"
+  - "[ $TEST_BUILDS == true ]  || $BIN $OPTION ./node_modules/lodash/test/test.js $TARGET_PATH"
+  - "[ $TEST_BUILDS == false ] || node ./test/test.js --time-limit 45m"
