--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "lodash": "./bin/lodash"
   },
   "dependencies": {
-    "closure-compiler": "~0.2.1",
+    "closure-compiler": "0.2.3",
     "lodash": "1.3.1",
-    "uglify-js": "~2.4.0"
+    "uglify-js": "2.4.6"
   },
   "engines": [
     "node",
