--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "main": "bin/lodash",
   "bin": { "lodash": "bin/lodash" },
-  "keywords": ["builder", "compile", "customize", "lodash", "util"],
+  "keywords": "builder, compile, customize, lodash, util",
   "author": "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
   "contributors": [
     "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
