--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
     "Blaine Bublitz <blaine@iceddev.com> (http://www.iceddev.com/)",
     "Kit Cambridge <github@kitcambridge.be> (http://kitcambridge.be/)",
-    "Mathias Bynens <mathias@qiwi.be> (http://mathiasbynens.be/)"
+    "Mathias Bynens <mathias@qiwi.be> (https://mathiasbynens.be/)"
   ],
   "repository": "lodash/lodash-cli",
   "scripts": { "test": "echo \"See the repository CONTRIBUTING.md for testing instructions.\"" },
