--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lodash-cli",
   "version": "3.0.0-pre",
   "description": "The Lo-Dash command-line interface.",
-  "homepage": "http://lodash.com/custom-builds",
+  "homepage": "https://lodash.com/custom-builds",
   "license": "MIT",
   "main": "bin/lodash",
   "bin": { "lodash": "bin/lodash" },
