Adjust for lodash project structure changes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
     - node_js: "0.8"
       env: BUILD="modern" NPM_VERSION="~1.4.0"
     - node_js: "0.8"
-      env: BUILD="modern" EXPORTS="npm" OUTPUT_PATH="./npm/node_modules" TARGET_PATH="../../../npm/index.js" NPM_VERSION="~1.4.0"
+      env: BUILD="modern" EXPORTS="npm" NPM_VERSION="~1.4.0" OUTPUT_PATH="./npm/node_modules" TARGET_PATH="../../../npm/index.js"
     - node_js: "0.10"
       env: BIN="rhino" BUILD="compat" OPTION="-require"
     - node_js: "0.10"
@@ -31,7 +31,7 @@ before_install:
   - "nvm use $TRAVIS_NODE_VERSION"
   - "npm config set loglevel error"
   - "npm i -g npm@\"$NPM_VERSION\""
-  - "git clone --depth=10 --branch=master git://github.com/lodash/lodash.git ./node_modules/lodash && cd ./node_modules/lodash && npm i && cd ../../"
+  - "git clone --depth=10 --branch=master git://github.com/lodash/lodash.git ./node_modules/lodash-compat && cd ./node_modules/lodash-compat && sed -i'' 's|\"lodash\"|\"lodash-compat\"|' ./package.json && npm i && cd ../../"
   - "[ $OUTPUT_PATH != false ] || OUTPUT_PATH=\"./$EXPORTS/$BUILD\""
   - "[ $TARGET_PATH != false ] || TARGET_PATH=\"../../../$EXPORTS/$BUILD/index.js\""
   - "[ $BIN != 'rhino' ] || (sudo mkdir /opt/rhino-1.7R5 && sudo wget --no-check-certificate -O /opt/rhino-1.7R5/js.jar https://lodash.com/_travis/rhino-1.7R5.jar)"
@@ -39,8 +39,8 @@ before_install:
   - "[ $BIN != 'ringo' ] || (wget --no-check-certificate https://lodash.com/_travis/ringojs-0.11.zip && sudo unzip ringojs-0.11 -d /opt && rm ringojs-0.11.zip)"
   - "[ $BIN != 'ringo' ] || (sudo ln -s /opt/ringojs-0.11/bin/ringo /usr/local/bin/ringo && sudo chmod +x /usr/local/bin/ringo)"
   - "[ $TEST_BUILDS == true ]  || node ./bin/lodash modularize $BUILD exports=$EXPORTS -o $OUTPUT_PATH"
-  - "[ $TEST_BUILDS == false ] || node ./bin/lodash $BUILD -d -o ./node_modules/lodash/dist/lodash.$BUILD.js"
+  - "[ $TEST_BUILDS == false ] || node ./bin/lodash $BUILD -d -o ./node_modules/lodash-compat/lodash.$BUILD.js"
 script:
   - "[ $EXPORTS != 'npm' ]     || (cd ./npm && cp ../test/npm/index.js ./index.js && cd ../)"
-  - "[ $TEST_BUILDS == true ]  || $BIN $OPTION ./node_modules/lodash/test/test.js $TARGET_PATH"
+  - "[ $TEST_BUILDS == true ]  || $BIN $OPTION ./node_modules/lodash-compat/test/test.js $TARGET_PATH"
   - "[ $TEST_BUILDS == false ] || node ./test/test.js --time-limit 45m"
