--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
     - BUILD="compat"
     - BUILD="modern"
     - BUILD="modern" EXPORTS="npm" OUTPUT_PATH="./npm/node_modules" TARGET_PATH="../../../npm/index.js"
+    - BUILD="modern" EXPORTS="es6" OUTPUT_PATH="./es6" TARGET_PATH="../../../es6/lodash.js"
 matrix:
   include:
     - node_js: "0.8"
@@ -39,7 +40,8 @@ before_install:
   - "[ $BIN != 'ringo' ] || (wget --no-check-certificate https://lodash.com/_travis/ringojs-0.11.zip && sudo unzip ringojs-0.11 -d /opt && rm ringojs-0.11.zip)"
   - "[ $BIN != 'ringo' ] || (sudo ln -s /opt/ringojs-0.11/bin/ringo /usr/local/bin/ringo && sudo chmod +x /usr/local/bin/ringo)"
   - "[ $TEST_BUILDS == true ]  || node ./bin/lodash modularize $BUILD exports=$EXPORTS -o $OUTPUT_PATH"
-  - "[ $TEST_BUILDS == false ] || node ./bin/lodash $BUILD -d -o ./node_modules/lodash-compat/lodash.$BUILD.js"
+  - "[ $EXPORTS != 'es6' ] || npm i -g es6-module-transpiler@\"0.9.6\""
+  - "[ $EXPORTS != 'es6' ] || compile-modules convert -f commonjs -o ./ ./es6/*.js ./es6/**/*.js"
 script:
   - "[ $EXPORTS != 'npm' ]     || (cd ./npm && cp ../test/npm/index.js ./index.js && cd ../)"
   - "[ $TEST_BUILDS == true ]  || $BIN $OPTION ./node_modules/lodash-compat/test/test.js $TARGET_PATH"
