--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "scripts": { "test": "echo \"See the repository CONTRIBUTING.md for testing instructions.\"" },
   "dependencies": {
     "closure-compiler": "0.2.6",
-    "glob": "~3.2.11",
-    "lodash-compat": "3.0.0-pre",
-    "uglify-js": "2.4.15"
+    "glob": "~4.3.5",
+    "lodash-compat": "3.0.0",
+    "uglify-js": "2.4.16"
   },
   "devDependencies": {
     "qunit-extras": "~1.4.0",
