--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,10 @@ env:
     - BIN="rhino" OPTION="-require"
     - BIN="ringo"
     - BUILD="modern"
-    - BUILD="modern" EXPORTS="es6" TRANSPILER="6to5"
+    - BUILD="modern" EXPORTS="es"  TRANSPILER="6to5"
+    - BUILD="modern" EXPORTS="es"  TRANSPILER="es6-module-transpiler"
     - BUILD="modern" EXPORTS="es6" TRANSPILER="es6-module-transpiler"
+    - BUILD="modern" EXPORTS="iojs"
     - BUILD="modern" EXPORTS="node"
     - BUILD="modern" EXPORTS="npm"
     - TEST_BUILDS=true
@@ -57,18 +59,18 @@ before_install:
   - "[ $EXPORTS != 'amd' ] || TARGET_PATH=\"../../../amd/main.js\""
   - "[ $EXPORTS != 'amd' ] || (QUERY=\"build=$TARGET_PATH&loader=$LOADER\" && TAGS=\"$BUILD,$LOADER,amd,development\")"
   - "[ $EXPORTS != 'amd' ] || npm i chalk@\"0.5.1\" ecstatic@\"0.5.6\" request@\"^2.0.0\" sauce-tunnel@\"^2.0.0\""
-  - "[ $EXPORTS != 'es6' ] || TARGET_PATH=\"../../../es6/lodash.js\""
+  - "([ $EXPORTS != 'es' ] && [ $EXPORTS != 'es6' ]) || TARGET_PATH=\"../../../$EXPORTS/lodash.js\""
   - "[ $EXPORTS != 'npm' ] || OUTPUT_PATH=\"./npm/node_modules\""
   - "[ $TEST_BUILDS == true ]  || node ./bin/lodash modularize $BUILD exports=$EXPORTS -o $OUTPUT_PATH"
   - "[ $TRANSPILER != '6to5' ] || npm i -g 6to5@\"^2.0.0\""
-  - "[ $TRANSPILER != '6to5' ] || 6to5 ./es6 --out-dir ./es6"
+  - "[ $TRANSPILER != '6to5' ] || 6to5 ./$EXPORTS --out-dir ./$EXPORTS"
   - "[ $TRANSPILER != 'es6-module-transpiler' ] || npm i -g es6-module-transpiler@\"0.9.6\""
-  - "[ $TRANSPILER != 'es6-module-transpiler' ] || compile-modules convert -f commonjs -o ./ ./es6/*.js ./es6/**/*.js"
+  - "[ $TRANSPILER != 'es6-module-transpiler' ] || compile-modules convert -f commonjs -o ./ ./$EXPORTS/*.js ./$EXPORTS/**/*.js"
   - "[ $EXPORTS != 'npm' ] || (cd ./npm && cp ../test/npm/index.js ./index.js && cd ../)"
 script:
-  - "[ $EXPORTS != 'amd' ]  || node $SAUCE_PATH name=\"lodash tests\"     runner=\"$RUNNER_PATH/index.html?$QUERY\"      tags=\"$TAGS\""
-  - "[ $EXPORTS != 'amd' ]  || node $SAUCE_PATH name=\"backbone tests\"   runner=\"$RUNNER_PATH/backbone.html?$QUERY\"   tags=\"$TAGS,backbone\""
-  - "[ $EXPORTS != 'amd' ]  || node $SAUCE_PATH name=\"underscore tests\" runner=\"$RUNNER_PATH/underscore.html?$QUERY\" tags=\"$TAGS,underscore\""
-  - "([ $EXPORTS != 'amd' ] || [ $BUILD != 'compat' ])    || node $SAUCE_PATH name=\"lodash tests\" runner=\"$RUNNER_PATH/index.html?$QUERY\" tags=\"$TAGS,ie-compat\" compatMode=7"
-  - "([ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == true ])  || $BIN $OPTION $RUNNER_PATH/test.js $TARGET_PATH"
-  - "([ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == false ]) || node ./test/test.js --time-limit 45m"
+  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"lodash tests\"     runner=\"$RUNNER_PATH/index.html?$QUERY\"      tags=\"$TAGS\""
+  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"backbone tests\"   runner=\"$RUNNER_PATH/backbone.html?$QUERY\"   tags=\"$TAGS,backbone\""
+  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"underscore tests\" runner=\"$RUNNER_PATH/underscore.html?$QUERY\" tags=\"$TAGS,underscore\""
+  - "[ $EXPORTS != 'amd' ] || [ $BUILD != 'compat' ]    || node $SAUCE_PATH name=\"lodash tests\" runner=\"$RUNNER_PATH/index.html?$QUERY\" tags=\"$TAGS,ie-compat\" compatMode=7"
+  - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == true ]  || $BIN $OPTION $RUNNER_PATH/test.js $TARGET_PATH"
+  - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == false ] || node ./test/test.js --time-limit 45m"
