--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "closure-compiler": "0.2.6",
     "glob": "4.3.5",
     "lodash-compat": "3.0.1",
+    "semver": "4.2.0",
     "uglify-js": "2.4.16"
   },
   "devDependencies": {
